--- a/src/assets/components/cocktailCard/cocktailCard.css
+++ b/src/assets/components/cocktailCard/cocktailCard.css
@@ -2,21 +2,22 @@
     width: 50%;
     position: fixed;
     left: 25%;
-    top: 25%;
+    top: 15%;
+    max-height: 90%;
     background-color: aliceblue;
     color: black;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    z-index: 1;
+    z-index: 2;
+    padding: 1em 0;
 }
 
 .cocktailRecipe{
     display: flex;
     justify-content: space-between;
     width: 50%;
-    margin: 1em;
 }
 
 #closeDetails{
@@ -24,4 +25,9 @@
     margin: 1em;
     position: absolute;
     left: 85%;
+    top: 0%;
+}
+
+.instructions{
+    max-width: 80%;
 }
