--- a/src/assets/components/header/header.css
+++ b/src/assets/components/header/header.css
@@ -7,3 +7,12 @@ nav{
 .search{
     width: 25%;
 }
+
+input{
+    width: 100%;
+    padding: 0.5em;
+    border-radius: 5px;
+    border: 1px solid #646cff;
+    font-size: 1em;
+    outline: none;
+}
