--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -7,3 +7,11 @@ width: 100%;
         width: 40%;
     }
 }
+
+@media (max-width: 768px) {
+    #ctCat{
+        a{
+            width: 100%;
+        }
+    }
+  }
