--- a/src/pages/cocktailGallery/cocktailGallery.css
+++ b/src/pages/cocktailGallery/cocktailGallery.css
@@ -49,6 +49,9 @@
     pointer-events: none;
   }
 
+div button{
+    margin: 1em;
+}
   @media (max-width: 768px) {
     .cGallery{
         flex-direction: column;
