--- a/src/App.css
+++ b/src/App.css
@@ -41,3 +41,16 @@
   color: #888;
 }
 
+body {
+  background-image: url(../src/assets/img/mae-mu-YNMjGIPgD_c-unsplash.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  color: rgba(7,7,7,0.7);
+  text-shadow: 1px 1px 1px rgba(7, 7, 7, 0.7);
+}
+
+div {
+  background-color: rgba(235,235,235,0.3);
+}
