--- a/src/assets/components/header/header.css
+++ b/src/assets/components/header/header.css
@@ -16,3 +16,16 @@ input{
     font-size: 1em;
     outline: none;
 }
+
+/* body {
+  background-image: url(../src/assets/img/mae-mu-YNMjGIPgD_c-unsplash.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  color: rgba(7,7,7,0.3);
+}
+
+div {
+  background-color: rgba(235,235,235,0.3);
+} */
